# qa_guru_python_hw_16

./: README.md  pyproject.toml
